Project completed, micro animation work left

--- a/src/sass/component/_button.scss
+++ b/src/sass/component/_button.scss
@@ -4,4 +4,9 @@
   background-color: #00dbd0;
   color: #fff;
   border: none;
+
+  &--subscribe {
+    padding: 21px 45.5px 24px;
+    border-radius: 30px;
+  }
 }
