--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -31,6 +31,17 @@ body {
   color: #374b5c;
 }
 
+.heading-tertiary {
+  font-size: 18px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.33;
+  letter-spacing: normal;
+  text-align: left;
+  color: #00dbd0;
+}
+
 .paragraph {
   font-size: 16px;
   font-weight: normal;
