--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -8,14 +8,16 @@
 
   &::after {
     content: "";
-    width: 100%;
-    height: 100%;
+    // width: 100%;
+    // height: 100%;
+    width: 419px;
+    height: 570px;
     background: url("../../asset/Group 195.png");
     background-repeat: no-repeat;
     background-position: center;
     position: absolute;
-    top: 20%;
-    left: 8%;
+    top: 33%;
+    left: 41%;
     display: inline-block;
     z-index: 10;
   }
