--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,9 +4,12 @@
 @import "./component/nav";
 @import "./component/button";
 
-
+@import "./layout/blog";
+@import "./layout/footer";
 @import "./layout/header";
+@import "./layout/newsLetter";
+@import "./layout/presentation";
+@import "./layout/review";
 @import "./layout/welcome";
 
-
-@import './page/homePage'
+@import "./page/homePage";
