--- a/src/sass/layout/_blog.scss
+++ b/src/sass/layout/_blog.scss
@@ -40,6 +40,18 @@
     justify-content: space-around;
     align-items: center;
     padding: 0 10rem;
+
+    @include respond(big-desktop) {
+      padding: 0 11rem;
+    }
+
+    @include respond(tab-land) {
+      padding: 0 7rem;
+    }
+
+    @include respond(tab-port) {
+      padding: 0 2rem;
+    }
   }
 
   &__card {
@@ -49,6 +61,12 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+
+    transition: all 0.2s ease-in;
+
+    &:hover {
+      transform: translateY(-10px);
+    }
 
     &--img {
       width: 100%;
