--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -81,8 +81,34 @@
     }
 
     &--item {
-      color: #fff;
       padding: 5px 0;
+    }
+
+    &--link:link,
+    &--link:visited,
+    &--link:active {
+      text-decoration: none;
+      color: #fff;
+      position: relative;
+
+      &::after {
+        content: "";
+        width: 100%;
+        position: absolute;
+        right: 0px;
+        bottom: -5px;
+        background: #00dbd0;
+        height: 2px;
+
+        opacity: 0;
+        visibility: hidden;
+        transition: all 0.2s ease-in;
+      }
+
+      &:hover::after {
+        opacity: 1;
+        visibility: visible;
+      }
     }
   }
 
