--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -29,6 +29,10 @@ body {
   letter-spacing: normal;
   text-align: left;
   color: #374b5c;
+
+  @include respond(tab-port) {
+    font-size: 20px;
+  }
 }
 
 .heading-tertiary {
@@ -51,4 +55,8 @@ body {
   letter-spacing: normal;
   text-align: left;
   color: #374b5c;
+
+  @include respond(tab-port) {
+    font-size: 14px;
+  }
 }
